// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot and contain correct buttons 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Category Menu"
  buttonAriaLabel="Category Menu"
  id="SidebarCategoryMenu-category1"
  isMenuOpen={false}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tooltipText="Category options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-category1"
      onClick={[Function]}
      show={true}
      text="Mute Category"
    />
    <MenuItemAction
      icon={
        <PencilOutlineIcon
          size={16}
        />
      }
      id="rename-category1"
      onClick={[Function]}
      show={true}
      text="Rename Category"
    />
    <MenuItemAction
      icon={
        <TrashCanOutlineIcon
          size={16}
        />
      }
      id="delete-category1"
      isDangerous={true}
      onClick={[Function]}
      show={true}
      text="Delete Category"
    />
  </MenuGroup>
  <MenuGroup>
    <SubMenuItem
      direction="right"
      icon={
        <SortAlphabeticalAscendingIcon
          size={16}
        />
      }
      id="sortChannels"
      openUp={false}
      renderSelected={true}
      selectedValueText="Alphabetically"
      show={true}
      styleSelectableItem={true}
      subMenu={
        Array [
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortAlphabetical",
            "text": "Alphabetically",
          },
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortByMostRecent",
            "text": "Recent Activity",
          },
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortManual",
            "text": "Manually",
          },
        ]
      }
      subMenuClass="pl-4"
      text="Sort"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <FolderPlusOutlineIcon
          size={16}
        />
      }
      id="create-category1"
      onClick={[Function]}
      show={true}
      text="Create New Category"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot when category is favorites 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Category Menu"
  buttonAriaLabel="Category Menu"
  id="SidebarCategoryMenu-category1"
  isMenuOpen={false}
  onOpenDirectionChange={[Function]}
  onToggleMenu={[Function]}
  tooltipText="Category options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <BellOutlineIcon
          size={16}
        />
      }
      id="mute-category1"
      onClick={[Function]}
      show={true}
      text="Mute Category"
    />
  </MenuGroup>
  <MenuGroup>
    <SubMenuItem
      direction="right"
      icon={
        <SortAlphabeticalAscendingIcon
          size={16}
        />
      }
      id="sortChannels"
      openUp={false}
      renderSelected={true}
      selectedValueText="Alphabetically"
      show={true}
      styleSelectableItem={true}
      subMenu={
        Array [
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortAlphabetical",
            "text": "Alphabetically",
          },
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortByMostRecent",
            "text": "Recent Activity",
          },
          Object {
            "action": [Function],
            "direction": "right",
            "id": "sortManual",
            "text": "Manually",
          },
        ]
      }
      subMenuClass="pl-4"
      text="Sort"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <FolderPlusOutlineIcon
          size={16}
        />
      }
      id="create-category1"
      onClick={[Function]}
      show={true}
      text="Create New Category"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;
